Work it. Add operators select

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <script type="text/javascript">
    var storedState = localStorage.getItem('elm-todo-state');
    var startingState = storedState ? JSON.parse(storedState) : null;
-   var todomvc = Elm.fullscreen(Elm.Todo, { getStorage: startingState });
+   var todomvc = Elm.fullscreen(Elm.NoSyntaxBitch.View, {
+     getStorage: startingState
+   });
 
    todomvc.ports.focus.subscribe(function(selector) {
      setTimeout(function() {
